<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Water Release</string>
    <string name="main_activity">Schedules</string>
    <string name="enter_your_data">Enter your data</string>
    <string name="push_data">Push data</string>
    <string name="title_activity_nav" translatable="false">navActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login" translatable="false">WRIS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="user_options">User options</string>

    <!--Strings related to sign up-->
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="mob_hint">Mobile Number</string>
    <string name="reenter_pwd">Re-enter password</string>
    <string name="create">Create Account</string>
    <string name="go_to_login">Already a member? Login</string>

    <!-- Strings related to register -->
    <string name="next">Complete login</string>

    <string name="place_select">Pick Dam location</string>
    <string name="title_activity_maps">Maps</string>
    <!-- Strings related to user questions -->
    <string name="post_button">Post query</string>
    <string name="choose_city">Pick your city:</string>
    <string name="post_query">Post your question</string>

    <string name="days">days</string>
    <string name="hours">hrs</string>
    <string name="minutes">mins</string>
    <string name="seconds">secs</string>
    <string name="worldcup_2k19">setdate</string>

    <string name="duration">Enter Duration (in hours)</string>
    <string name="notify">Notify</string>
    <string name="update">Update</string>
    <string name="stat">Status :</string>
    <string name="submitSchedule">Submit Schedule</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="scheduleSubmitted">Schedule Successfully Submitted!</string>
    <string name="clear">Clear</string>

    <!--Strings related to card xml-->
    <string name="txtDay" translatable="false">12D</string>
    <string name="txtHour" translatable="false">12H</string>
    <string name="txtMin" translatable="false">12M</string>
    <string name="txtSec" translatable="false">12S</string>
    <string name="textView" translatable="false">TextView</string>
    <string name="status">Active</string>

    <!--Strings related to add schedule fragment xml-->
    <string name="in_time">Time</string>
    <string name="in_date">Date</string>
    <string name="dam_hint">Enter Dam Name</string>
    <string name="lat">Latitude</string>
    <string name="longi">Longitude</string>

    <!--Strings related to emergency calls-->
    <string name="call_police">Call the Police</string>
    <string name="firebrigade">Call the Fire Brigade</string>
    <string name="emergency_dis">Call the Emergency Disaster Management</string>

    <!--Strings related to emergency notif-->
    <string name="em_not">Type your emergency message here</string>
    <string name="push_message">Send emergency message</string>
    <string name="register">No account?Create one</string>

    <!--Strings related to nav drawer-->
    <string name="nav_schedule">Check the list of schedules</string>
    <string name="add_schedule">Add a schedule</string>
    <string name="nav_emergency">Send Emergency Notification</string>
    <string name="nav_subscribe">Get Notifiations From</string>
    <string name="location_picker">Admin Preferences</string>
    <string name="nav_contact">Contact Dam Authority</string>
    <string name="emergency">Emergency Contacts</string>
    <string name="nav_view_query">View questions</string>
    <string name="admin_options">Admin Options</string>
    <string name="logout">Log Out</string>
    <string name="login">Admin Login</string>

    <!--Strings related to recycle adapter-->
    <string name="water_rel">Water will be released on</string>
    <string name="at">Time</string>
    <string name="for_duration">Duration</string>
    <string name="hourss">hours</string>

    <!--Strings related to add schedule fragment-->
    <string name="toast_fill_details">Please enter all the details</string>
    <string name="toast_fill_dur">Please enter a number for duration!</string>
    <string name="toast_success">Schedule has been submitted successfully!</string>

    <!--Strings related to contact authority-->
    <string name="blank">Please select something</string>

    <!--Strings related to emergency contacts-->
    <string name="fire_brig_connect">Connecting to Fire Brigade</string>
    <string name="confirm_call">Are you sure you want to make the call?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="emerg_connect">Connecting to Emergency Disaster Management</string>
    <string name="police_connect">Connecting to Police</string>

    <!--Strings related to navbar actions-->
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="place">PickPlace</string>
    <string name="confirm_place">Do you want set this position for warning?</string>
    <string name="exit">Exit</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="cancel_this_schedule">Cancel this schedule</string>
    <string name="reschedule">Reschedule</string>

    <!--Strings related to Update schedule-->
    <string name="success">Success</string>

    <string name="query">Query the authority</string>
    <string name="post_to_facebook">Post to Facebook</string>
    <string name="facebook_app_id">612465245782300</string>
    <string name="post_to_twitter">Post to Twitter</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">xXsmt8VHVXwGqddC4L7p3zFHh</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">RIuutAJDVMSLMSEUnsXSKrc9oKgVX5LiHqLbWt6kCX0q6ekQBA</string>
    <string name="share">Share</string>
    <string name="phone1">Enter phone no. of cellular tower 1</string>
    <string name="phone2">Enter phone no. of cellular tower 2</string>
    <string name="phone3">Enter phone no. of cellular tower 3</string>
    <string name="msg">Send Message to cellular towers</string>

    <!--Strings related to Alarmnotif-->
    <string name="timely">Timely notification for:</string>

    <string name="affects">Affected radius by released water</string>
    <string name="loc_full">Location Submitted Successfully!</string>
    <string name="water">Water will be released from</string>
    <string name="jo">located at</string>
    <string name="loca">. Please be Careful!</string>
    <string name="auth_mes">Authority message :</string>
    <string name="no_city">No Cities subscribed!</string>

    <string name="invalid_info">Invalid information</string>
    <string name="select">Please select something</string>
    <string name="confirm_ex_ac">Are you sure you want to close this activity?</string>
    <string name="close_act">Closing Activity</string>
    <string name="check">Checking....</string>
    <string name="no_int">You are not connected to the internet!</string>
    <string name="invalid_cred">Invalid credentials, try again</string>
    <string name="authen">Authenticating...</string>
    <string name="submit">Submit</string>
</resources>
