<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sih.firebasesendnotif.Fragments.DamLocationPicker">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <!-- TODO: Update blank fragment layout -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <!--android:onClick="goPlacePicker"-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/citytv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_city"
        android:textSize="18sp"
        android:padding="10dp"
        android:paddingLeft="20dp"/>

        <Spinner
            android:id="@+id/act_spin_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/citytv"
            android:padding="20dp"
            android:textAlignment="center" />
    </RelativeLayout>

    <EditText
        android:id="@+id/act_dam"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/dam_hint" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/act_tv_place"
                android:layout_width="130dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/act_place"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/mybutton"
                android:text="@string/place_select"
                android:textColor="@color/white" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/act_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lat"
            android:padding="10dp" />

        <TextView
            android:id="@+id/act_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/longi"
            android:padding="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone1"
            android:id="@+id/phone1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone2"
            android:id="@+id/phone2"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone3"
            android:id="@+id/phone3"
            />

    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/act_submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/mybutton"
        android:text="Submit"
        android:textColor="@color/white" />


</LinearLayout>
    </ScrollView>
</FrameLayout>
