<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sih.firebasesendnotif.Fragments.DamLocationPicker">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />
    <!--android:onClick="goPlacePicker"-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="94dp"
            android:text="@string/choose_city"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="53dp"
            android:layout_toEndOf="@+id/textView1"
            android:textAlignment="center" />
    </RelativeLayout>
    <EditText
        android:id="@+id/tvDam"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/dam_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/tvPlace"
                android:layout_width="218dp"
                android:layout_height="65dp"
                android:hint="@string/address_hint" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:text="@string/place_select" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/tvLat"
                android:layout_width="150dp"
                android:layout_height="32dp"
                android:hint="@string/lat" />

            <TextView
                android:id="@+id/tvLong"
                android:layout_width="150dp"
                android:layout_height="31dp"
                android:hint="@string/longi" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_loc"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:textAlignment="center"
        android:layout_gravity="center"/>


</LinearLayout>
</FrameLayout>
