<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sih.firebasesendnotif.Fragments.AddScheduleFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/in_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="86dp"
            android:layout_toStartOf="@+id/btn_date"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:hint="Date"/>

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/in_time"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="29dp"
            android:text="@string/selectDate" />

        <TextView
            android:id="@+id/in_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/in_date"
            android:layout_below="@+id/in_date"
            android:hint="Time"
            android:textColor="@color/black"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_date"
            android:layout_alignStart="@+id/btn_date"
            android:layout_below="@+id/btn_date"
            android:text="@string/selectTime" />

        <EditText
            android:id="@+id/txtDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn_time"
            android:layout_alignStart="@+id/in_time"
            android:layout_below="@+id/btn_time"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="Enter Duration (in Hours)"
            android:inputType="number|numberSigned|numberDecimal" />

        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/clear"
            android:layout_alignBottom="@+id/clear"
            android:layout_alignEnd="@+id/btn_date"
            android:text="@string/submitSchedule" />

        <Button
            android:id="@+id/clear"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtDuration"
            android:layout_centerVertical="true"
            android:text="@string/clear" />


    </RelativeLayout>
</FrameLayout>
