<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sih.firebasesendnotif.Fragments.ContactAuthority">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/editText2"
            android:layout_marginTop="97dp"
            android:text="@string/choose_city"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/spinner"
            android:layout_below="@+id/textView2"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:text="@string/post_button"
            android:background="@drawable/mybutton"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="52dp"
            android:text="@string/post_query"
            android:textSize="18sp" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView1"
            android:layout_toEndOf="@+id/button1" />
    </RelativeLayout>


</FrameLayout>
