<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.github.florent37.shapeofview.shapes.RoundRectView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_margin="9dp"
        android:background="@color/cardview_light_background"
        android:elevation="10dp"
        android:padding="15dp"
        app:roundRect_bottomLeftRadius="20dp"
        app:roundRect_bottomRightRadius="20dp"
        app:roundRect_topLeftRadius="20dp"
        app:roundRect_topRightRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--<RelativeLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:padding="5dp"-->
            <!--android:id="@+id/rLNotch"-->
            <!--android:background="@color/black">-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="12d 12h 24m 7s"-->
            <!--android:textColor="@color/white"-->
            <!--android:textAllCaps="true"-->
            <!--android:textSize="20sp"-->
            <!--android:layout_centerHorizontal="true" />-->
            <RelativeLayout
                android:id="@+id/rLNotch"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@color/black"
                android:padding="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tveventStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/worldcup_2k19"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/LinearLayout1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/counter"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtDay"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="@string/txtDay"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#4a0000"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/counter"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtHour"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="@string/txtHour"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#4a0000"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/counter"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtMinute"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="@string/txtMin"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#4a0000"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/counter"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtSecond"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="@string/txtSec"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#4a0000"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

            <!--</RelativeLayout>-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/textView"
                    android:textSize="23dp"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView3"
                    android:layout_alignBottom="@+id/textView3"
                    android:layout_toEndOf="@+id/textView3"
                    android:text="@string/status"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/date"
                    android:text="@string/textView"
                    android:textSize="15dp"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/time"
                    android:text="@string/textView"
                    android:textSize="15dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/stat" />

            </RelativeLayout>
        </LinearLayout>
    </com.github.florent37.shapeofview.shapes.RoundRectView>
</LinearLayout>